<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/xNombreCompletoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="20dp"
            >

            <EditText
                android:id="@+id/xNombreCompleto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/nombre_completo"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <DatePicker
            android:id="@+id/xDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/xTelefonoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="20dp">

            <EditText
                android:id="@+id/xTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/telefono"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/xEmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="20dp"
            >

            <EditText
                android:id="@+id/xEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/xDescripcionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="20dp"
            >

            <EditText
                android:id="@+id/xDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/desc_contacto"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/xSiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/siguiente"
            android:textColor="@color/primaryText"
            android:background="@color/colorAccent"
            />

    </LinearLayout>

</ScrollView>
