<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/confirmar"
                android:textSize="24dp"
                />

            <TextView
                android:id="@+id/xtvNombreCompleto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="50dp"
                android:textSize="18dp"
                />

            <TextView
                android:id="@+id/xtvFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="50dp"
                android:textSize="18dp"
                />

            <TextView
                android:id="@+id/xtvTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="50dp"
                android:textSize="18dp"
                />

            <TextView
                android:id="@+id/xtvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="50dp"
                android:textSize="18dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:text="@string/desc_header"
                    android:textSize="18dp"
                    />

                <TextView
                    android:id="@+id/xtvDescripcion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="25dp"
                    android:textSize="18dp"
                    android:layout_marginStart="25dp" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/xbEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/editar"
            android:background="@color/colorAccent"
            />

    </LinearLayout>

</ScrollView>